# growth-mindeset-project

./: README.md  main.py  pyproject.toml
