[tool.poetry]
name = "growth-mindset-project"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
package-mode = false
python = ">=3.8,<3.13"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
