[tool.poetry]
name = "growth-mindset-project"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
streamlit = "^1.32.0"  # Or whichever version you're using

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

