[tool.poetry]
name = "growth-mindset-project"
version = "0.1.0"
description = "Streamlit Growth Mindset App"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
streamlit = "^1.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
